<resources>
    <string-array name="default_value">
        <item>-</item>
    </string-array>
    <string name="app_name" translatable="false">&appname;</string>
    <string name="author" translatable="false">by &author;</string>
    <string name="my_email" translatable="false">ashomokdev@gmail.com</string>
    <string name="version">version</string>
    <string name="exit_dialog_title">Do you want to exit?</string>
    <string name="alert_dialog_exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="remove_ads">Remove ads</string>
    <string name="about">About</string>
    <string name="share_opinion">Please share your opinion</string>
    <string name="ok" translatable="false">OK</string>
    <string name="later">Later</string>
    <string name="never">Never</string>
    <string name="recognition">Recognition…</string>
    <string name="camera_not_found">Camera not found</string>
    <string name="thank_you_for_your_support">Thank you for your support!</string>
    <string name="times_app_was_used" translatable="false">times_app_was_used</string>
    <string name="rate_app_dialog_title">Rate app</string>
    <string name="language">Language:</string>
    <string name="language_label">Language</string>
    <string name="change">change</string>
    <string name="my_docs">My docs</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="afrikaans">Afrikaans</string>
    <string name="arabic">Arabic</string>
    <string name="assamese">Assamese</string>
    <string name="azarbaijani">Azerbaijani</string>
    <string name="belorussian">Belorussian</string>
    <string name="bengali">Bengali</string>
    <string name="bulgarian">Bulgarian</string>
    <string name="catalan">Catalan</string>
    <string name="chinese">Chinese</string>
    <string name="croatin">Croatian</string>
    <string name="czech">Czech</string>
    <string name="danish">Danish</string>
    <string name="dutch">Dutch</string>
    <string name="estonian">Estonian</string>
    <string name="recognizing">Recognizing</string>
    <string name="english">English</string>
    <string name="max_checked_allowed">Max %1$s languages allowed</string>
    <string name="text_not_found">Text not found.</string>
    <string name="select_photo">Select a photo</string>
    <string name="file_not_found">File not found.</string>
    <string name="logout">Logout</string>
    <string name="facebook_application_id" translatable="false">1921494888130800</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1921494888130800</string>
    <string name="loading">Loading…</string>
    <string name="preference_file_key" translatable="false">preference_file_key</string>
    <string name="last_login_mode" translatable="false">last_login_mode</string>
    <string name="user_email" translatable="false">user_email</string>
    <string name="register">Register</string>
    <string name="alert_dialog_logout">Logout</string>
    <string name="ask_sign_out">You are signed in as %1$s. Sign out?</string>
    <string name="you_signed_in_as">You are signed in as \n%1$s</string>
    <string name="please_login">Please Sign in for having access to your work history</string>
    <string name="text">Text</string>
    <string name="PDF" translatable="false">PDF</string>
    <string name="bad_result">Bad result?\nChange language</string>
    <string name="text_result">Text result</string>
    <string name="copied">Copied</string>
    <string name="send_text_result_to">Send text result to</string>
    <string name="open_in_another_app">Open in\nanother app</string>
    <string name="not_avalible">You disabled this feature</string>
    <string name="allow_permissions">Please allow the permissions, otherwise this feature will not work.</string>
    <string name="permissions_needs">Permission needs!</string>
    <string name="no_app">You have no app to do this.</string>
    <string name="no_file">Unexpected error. File can not be find.</string>
    <string name="file_saved">File saved in</string>
    <string name="error_while_saving">Error occurs while saving file</string>
    <string name="send_pdf_to">Send PDF to</string>
    <string name="link_to_pdf" translatable="false">Link to PDF</string>
    <string name="share_pdf_message"> <![CDATA[Pdf file link: %1$s<br />Provided by app: %2$s]]></string>
    <string name="share_text_message"> <![CDATA[%1$s<br />Provided by app: %2$s]]></string>
    <string name="translate">Translate</string>
    <string name="can_not_get_supported_languages">Can not get supported languages.</string>
    <string name="error_while_translating">Error while translating.</string>
    <string name="network_error">Network error. Check internet connection.</string>
    <string name="language_not_supported">Language not supported</string>
    <string name="launch_title">FirebaseUI Auth Demo</string>
    <string name="sign_in">Sign in</string>
    <string name="green_theme">Green Theme</string>
    <string name="purple_theme">Purple Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="use_theme_header">Use theme:</string>
    <string name="logo_header">Logo:</string>
    <string name="firebase_logo_label">Firebase Auth</string>
    <string name="google_logo_label">Google</string>
    <string name="no_logo_label">None</string>
    <string name="auth_providers_header">Use auth providers:</string>
    <string name="email_label">Email</string>
    <string name="phone_label">Phone</string>
    <string name="facebook_label">Facebook</string>
    <string name="facebook_label_missing_config">Facebook - configuration missing</string>
    <string name="twitter_label">Twitter</string>
    <string name="twitter_label_missing_config">Twitter - configuration missing</string>
    <string name="google_label">Google</string>
    <string name="google_label_missing_config">Google - configuration missing</string>
    <string name="google_tos_label">Google TOS</string>
    <string name="firebase_tos_label">Firebase TOS</string>
    <string name="google_privacy_label">Google Privacy Policy</string>
    <string name="firebase_privacy_label">Firebase Privacy Policy</string>
    <string name="tos_header">Terms of Service URL:</string>
    <string name="privacy_policy_header">Privacy Policy URL:</string>
    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="unknown_sign_in_response">Unknown response from AuthUI sign-in</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="signed_in_header">You are signed in!</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account_label">Delete account</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="delete_account_failed">Delete account failed</string>
    <string name="user_profile_header">User profile:</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="default_theme">Default theme</string>
    <string name="configuration_required">Configuration is required - see README.md</string>
    <string name="other_options_header">Other Options:</string>
    <string name="rational_image_perm">This sample will read an image from local storage to upload to Cloud Storage.</string>
    <string name="anonymous_auth_failed_msg">Anonymous authentication failed, various components of the demo will not work. Make sure your device is online and that Anonymous Auth is configured in your Firebase project(https://console.firebase.google.com/project/_/authentication/providers)</string>
    <string name="extra_google_scopes">Example extra Google scopes</string>
    <string name="drive_file_scope">Drive File</string>
    <string name="youtube_data_scope">Youtube data</string>
    <string name="extra_facebook_scopes">Example extra Facebook scopes</string>
    <string name="friends">Friends</string>
    <string name="photos">Photos</string>
    <string name="idp_token">IDP Token</string>
    <string name="idp_secret">IDP Secret</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="send">Send</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="choose_image">Choose Image</string>
    <string name="accessibility_downloaded_image">Downloaded image</string>
    <string name="allow_new_email_acccount">Allow account creation if email does not exist.</string>
    <string name="canceled">Canseled</string>
    <string name="invalid_language_hints">Invalid language hints. \nRun again with Auto language.</string>
    <string name="result">Result</string>
    <string name="file_must_be_saved_downloading">File must be saved on the device before downloading. \nPlease allow permission.</string>
    <string name="this_option_is_not_be_avalible">This option is not available until you allow permission in phone Settings.</string>
    <string name="file_must_be_saved_opening">File must be saved on the device before. \nPlease allow permission.</string>
    <string name="needs_to_save">File needs to be saved on the device. \nPlease allow permission.</string>
    <string name="auto_detection">AUTO DETECTION</string>
    <string name="recently_chosen_languages">Recently chosen languages</string>
    <string name="all_languages">All languages</string>
    <string name="ocr_recently_chosen_languge_codes" translatable="false">ocr_recently_chosen_languge_codes</string>
    <string name="auto">auto</string>
    <string name="search_title">Search</string>
    <string name="search_hint">English</string>
    <string name="saved_language_codes">saved_language_codes</string>
    <string name="preferences">preferences</string>
    <string name="crop">Crop</string>
    <string name="main_action_rotate">Rotate</string>
    <string name="translate_recently_chosen_languge_codes" translatable="false">translate_recently_chosen_languge_codes</string>
    <string name="menu_item_delete">Delete</string>
    <string name="check">Check</string>
    <string name="unable_identify_user">Unable to identify user. Try login again.</string>
    <string name="deleted">Deleted</string>
    <string name="error_while_delete">Error while delete</string>
    <string name="selected">\u0020selected</string>
    <string name="select_all">Select all</string>
    <string name="select">Select</string>
    <string name="delete_docs">Delete %1$s docs?</string>
    <string name="delete">Delete</string>
    <string name="languages_selected">%1$s languages selected</string>
    <string name="unselect_all">Unselect all</string>
    <string name="update_to_premium">Update to premium</string>
    <string name="premium_account">Premium account \n&appname;</string>
    <string name="update_to_premium_account">Update to premium account for getting more features, developed especially for you!</string>
    <string name="one_month">One month</string>
    <string name="one_year">One year</string>
    <string name="price_per_month">%1$s %2$s/month</string>
    <string name="price_per_1_in_100">%1$s %2$s/request</string>
    <string name="price_per_1_in_5">%1$s %2$s/request</string>
    <string name="no_ads">No ads</string>
    <string name="are_you_developer">Are you a Developer?</string>
    <string name="are_you_developer_full">Are you a Developer, Designer, Marketing specialist or Translator? Join our team of enthusiasts. Let\'s contribute together.</string>
    <string name="this_is_free_version">This is a free version with ads</string>
    <string name="ads_free_explanation">Hate ads? We too. \nIf you like this app, please support a developer.</string>
</resources>