<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_items"
        android:checkableBehavior="single">

        <item
            android:id="@+id/my_docs"
            android:icon="@drawable/ic_android_black_24dp"
            android:title="@string/my_docs" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_android_black_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/update_to_premium"
            android:icon="@drawable/ic_android_black_24dp"
            android:title="@string/update_to_premium" />
    </group>
    <group
        android:id="@+id/logout_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_android_black_24dp"
            android:title="@string/logout" />
    </group>
</menu>