<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--todo checkbox at the action bar start instead of select all text. see default sms app for example-->
    <!--https://stackoverflow.com/a/36160839/3627736-->
    <!--http://www.vogella.com/tutorials/AndroidActionBar/article.html#making-the-action-bar-dynamic-->

    <item
        android:id="@+id/action_select_all"
        android:title="@string/select_all"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_unselect_all"
        android:title="@string/unselect_all"
        android:visible="false"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/menu_item_delete"
        app:showAsAction="ifRoom" />

</menu>